# rust-analyzer

./: .cachefiles  .gitignore  AGENTS.md  Cargo.toml  MIR_STATUS.md  devenv.nix  facts.md  goal.md  justfile  milestones.md  mirdataless_status.md  plan.md  ra-mir-limiation.md  streams.md
.cargo/: config.toml
.config/: nextest.toml
cg_clif/: Cargo.toml  rust-toolchain.toml
crates/cg-clif/: Cargo.toml  NOTES.md  debugging.md  mirdata_status.md  mirdataless.md  rustc-ice-2026-02-24T07_37_56-996954.txt
crates/cg-clif/src/: layout.rs  lib.rs  link.rs  mirdata_codegen.rs  pointer.rs  symbol_mangling.rs  tests.rs  value_and_place.rs
crates/cg-clif/src/abi/: mod.rs  pass_mode.rs  returning.rs
crates/hir-def/src/: attrs.rs  hir.rs  resolver.rs  signatures.rs
crates/hir-def/src/expr_store/: lower.rs  pretty.rs
crates/hir-def/src/hir/: type_ref.rs
crates/hir-expand/src/builtin/: derive_macro.rs  (+1 more)
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: codegen_abi.rs  consteval.rs  display.rs  drop.rs  freeze.rs  infer.rs  layout.rs  lib.rs  lower.rs  method_resolution.rs  mir.rs  next_solver.rs  utils.rs
crates/hir/src/: lib.rs
crates/project-model/src/: workspace.rs
crates/ra-mir-types/: Cargo.toml
crates/ra-mir-types/src/: lib.rs
crates/rac-abi/: CHANGES.md  Cargo.toml
crates/rac-abi/src/: abi_callconv.rs  layout_ty.rs  lib.rs  spec.rs
crates/rac-abi/src/callconv/: aarch64.rs  amdgpu.rs  arm.rs  avr.rs  bpf.rs  csky.rs  hexagon.rs  loongarch.rs  m68k.rs  mips.rs  mips64.rs  mod.rs  msp430.rs  nvptx64.rs  powerpc.rs  powerpc64.rs  reg.rs  riscv.rs  s390x.rs  sparc.rs  sparc64.rs  wasm.rs  x86.rs  x86_64.rs  x86_win32.rs  x86_win64.rs  xtensa.rs
crates/syntax/: rust.ungram
crates/test-utils/src/: minicore.rs
ra-mir-export/: .gitignore  Cargo.toml  generate-mirdata.sh  rust-toolchain.toml
ra-mir-export/src/: main.rs  translate.rs
(+27 files in other folders)
